--- a/todolistForm.html
+++ b/todolistForm.html
@@ -25,9 +25,9 @@
 
               <h6 class="mb-3">Todo List</h6>
 
-              <form class="d-flex justify-content-center align-items-center mb-4">
+              <form action="http://localhost/todoPHP/taskAdd" method="post" class="d-flex justify-content-center align-items-center mb-4">
                 <div class="form-outline flex-fill">
-                  <input type="text" id="form3" class="form-control form-control-lg" />
+                  <input type="text" name="taskDesc" id="taskDesc" class="form-control form-control-lg" />
                   <label class="form-label" for="form3">What do you need to do today?</label>
                 </div>
                 <button type="submit" class="btn btn-primary btn-lg ms-2">Add</button>
