--- a/tpl/login.html
+++ b/tpl/login.html
@@ -1,28 +1,8 @@
-<?php 
-session_start();
-
-if(isset($_SESSION['userId'])) {print ("User je logovan");}
-else {print("User nije logovan");}
-
-session_destroy();
-
-?>
-<!DOCTYPE html>
-<!-- Created By CodingLab - www.codinglabweb.com -->
-<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" href="views/style.css">
-    <script src="jQuery.js"></script>
-    <script src="ajax.js"></script>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
    </head>
-  <?php
-   if(!isset($_SESSION['userId'])){
-   ?>
 
-<body>
   <div class="container">
     <div class="title">Login</div>
     <div class="content">
@@ -45,9 +25,3 @@ session_destroy();
       </form>
     </div>
   </div>
-</body>
-
-<?php 
-   }
-?>
-</html>
