work in progress: assets>js. Ajax calls

--- a/tpl/login.html
+++ b/tpl/login.html
@@ -1,12 +1,14 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/loginForm.js"></script>
    </head>
 
   <div class="container">
     <div class="title">Login</div>
     <div class="content">
-      <form action="http://localhost/todoPHP/login" method="post">
+      <!-- prebaciti formu da pokrene neku JS scriptu / funkciju koja će nam pozvati API -->
+      <form action="#" method="post">
         <div class="user-details">
 
           <div class="input-box">
