code upadate for task and login

--- a/tpl/registration.html
+++ b/tpl/registration.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<!-- Created By CodingLab - www.codinglabweb.com -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <title> Registration </title>
-    <link rel="stylesheet" href="style.css">
-    <script src="jQuery.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/loginForm.js"></script>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 <body>
   <div class="container">
     <div class="title">Registration</div>
     <div class="content">
-      <form action="http://localhost/todoPHP/register" method="post">
+      <form action="#" method="post">
       <!-- Input fields for registration -->
         <div class="user-details">
           <div class="input-box">
