--- a/tpl/todolistForm.html
+++ b/tpl/todolistForm.html
@@ -1,46 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TodoApp</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Font Awesome (for icons) -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <script src="jQuery.js"></script>
-  <script src="ajax.js"></script>
+  
+  <script src="assets/js/task.js"></script>
 </head>
-
-<body>
-
-  <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Todo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Tags</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">TaskLists</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Logout</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
 
   <section class="vh-100" style="background-color: #e2d5de;">
     <div class="container py-5 h-100">
@@ -69,7 +39,7 @@
 
             </div>
           </div>
-          <ul class="allTasks">
+          <ul id="allTasks">
             <li>Task 1 </li>
             <li>Task 2 </li>
           </ul>
@@ -81,6 +51,34 @@
 
   <!-- Bootstrap JavaScript and dependencies -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
 
-</html>
+
+<!--
+
+   Navigation Bar
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Todo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Tags</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">TaskLists</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+-->
