registration form updated >registrationForms,js

--- a/tpl/registration.html
+++ b/tpl/registration.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+
   <head>
     <meta charset="UTF-8">
     <title> Registration </title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/loginForm.js"></script>
+    <script src="assets/js/registrationForm.js"></script>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
-<body>
+
+   
   <div class="container">
     <div class="title">Registration</div>
     <div class="content">
@@ -43,5 +43,3 @@
     </div>
   </div>
   
-</body>
-</html>
