--- a/tpl/registration.html
+++ b/tpl/registration.html
@@ -4,14 +4,15 @@
     <title> Registration </title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/registrationForm.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
 
-   
+
   <div class="container">
     <div class="title">Registration</div>
     <div class="content">
-      <form action="#" method="post">
+      <form action="#" name="registerForm" method="post">
       <!-- Input fields for registration -->
         <div class="user-details">
           <div class="input-box">
