todo list html update

--- a/tpl/todolistForm.html
+++ b/tpl/todolistForm.html
@@ -31,18 +31,12 @@
                 <button type="submit" class="btn btn-primary btn-lg ms-2">Add</button>
               </form>
 
-              <ul class="list-group mb-0">
-                <!-- Your existing list items with Bootstrap classes -->
-                <!-- ... -->
-
+              <ul id="allTasks" class="list-group mb-0">
               </ul>
 
             </div>
           </div>
-          <ul id="allTasks">
-            <li>Task 1 </li>
-            <li>Task 2 </li>
-          </ul>
+
 
         </div>
       </div>
